--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,8 @@ body {
   height: 100vh;
   width: 100%;
   padding: 2rem;
+  transition-property: background;
+  transition-duration: 4s;
 }
 
 .menu {
