--- a/src/styles.css
+++ b/src/styles.css
@@ -49,8 +49,8 @@ body {
 .square {
   position: absolute;
   border-radius: 5%;
-  -webkit-clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
-    clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
+  -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
 }
 
 .triangle {
