--- a/src/input.css
+++ b/src/input.css
@@ -54,6 +54,131 @@ body {
 input.input-timer {
   border: 1px solid rgba(255, 255, 255, 0.15);
 }
+
+.module-shape__wrapper.square {
+  position: absolute;
+  border-radius: 5%;
+  -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+}
+
+.module-shape__wrapper > .triangle {
+  position: absolute;
+  -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
+
+.module-shape__wrapper > .cross {
+  position: absolute;
+  -webkit-clip-path: polygon(
+    20% 0%,
+    0% 20%,
+    30% 50%,
+    0% 80%,
+    20% 100%,
+    50% 70%,
+    80% 100%,
+    100% 80%,
+    70% 50%,
+    100% 20%,
+    80% 0%,
+    50% 30%
+  );
+  clip-path: polygon(
+    20% 0%,
+    0% 20%,
+    30% 50%,
+    0% 80%,
+    20% 100%,
+    50% 70%,
+    80% 100%,
+    100% 80%,
+    70% 50%,
+    100% 20%,
+    80% 0%,
+    50% 30%
+  );
+}
+
+.module-shape__wrapper > .frame {
+  position: absolute;
+  border-radius: 20%;
+  -webkit-clip-path: polygon(
+    0% 0%,
+    0% 100%,
+    25% 100%,
+    25% 25%,
+    75% 25%,
+    75% 75%,
+    25% 75%,
+    25% 100%,
+    100% 100%,
+    100% 0%
+  );
+  clip-path: polygon(
+    0% 0%,
+    0% 100%,
+    25% 100%,
+    25% 25%,
+    75% 25%,
+    75% 75%,
+    25% 75%,
+    25% 100%,
+    100% 100%,
+    100% 0%
+  );
+}
+
+.module-shape__wrapper > .star {
+  position: absolute;
+  -webkit-clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    68% 57%,
+    79% 91%,
+    50% 70%,
+    21% 91%,
+    32% 57%,
+    2% 35%,
+    39% 35%
+  );
+  clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    68% 57%,
+    79% 91%,
+    50% 70%,
+    21% 91%,
+    32% 57%,
+    2% 35%,
+    39% 35%
+  );
+}
+
+.module-shape__wrapper > .arrow {
+  position: absolute;
+  -webkit-clip-path: polygon(
+    0 35%,
+    65% 35%,
+    60% 0%,
+    100% 50%,
+    60% 100%,
+    65% 65%,
+    0 65%
+  );
+  clip-path: polygon(
+    0 35%,
+    65% 35%,
+    60% 0%,
+    100% 50%,
+    60% 100%,
+    65% 65%,
+    0 65%
+  );
+}
+
 @keyframes appear {
   from {
     opacity: 0;
