--- a/src/input.css
+++ b/src/input.css
@@ -27,7 +27,7 @@ body {
   position: fixed;
   z-index: 1000;
   display: none;
-  background: #1b1a1a;
+  /* background: #1b1a1a; */
 }
 
 .menu.open {
@@ -46,8 +46,25 @@ body {
 }
 
 .alert {
+  position: relative;
   animation: appear 0.4s normal forwards ease-in-out;
+  overflow: hidden;
+  border-radius: 4px;
+  max-width: 400px;
 }
+
+.alert-progress {
+  display: block;
+  position: absolute;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  height: 4px;
+  animation: alertProgress linear forwards;
+  animation-duration: var(--ani-duration, 3s);
+  transform-origin: left;
+}
+
 .modal-button[for='hk-modal'] {
   display: none;
 }
@@ -196,5 +213,15 @@ input.input-timer {
   to {
     transform: scale(2.5);
     opacity: 0;
+  }
+}
+
+@keyframes alertProgress {
+  from {
+    transform: scale(1);
+  }
+
+  to {
+    transform: scaleX(0);
   }
 }
