splashScreen build fix

--- a/src/input.css
+++ b/src/input.css
@@ -224,6 +224,7 @@ input.input-timer {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  white-space: nowrap;
   animation: splashText 2s ease-in;
 }
 
